@@ -1,4 +1,2 @@
-DIST flay-2.4.0.gem 18944 SHA256 d80d8aca88924f28c80379bc8feb46c77691a203030fc73c2ff85028631081c1 SHA512 348afabb072d0bab4129f57fad9910994f15cc3961aacb4282eebfc4e8d387463c0a79957cd594d4868c99e328d2f693fe4602922efef1f491d25b6f54fdaf91 WHIRLPOOL 5cbd7085f86ca8ce9532c513d0570c3101c43145e8976bd07ab49e95d5b2ac82e73ed64d37adaa7b40fe110dd719a5428d47be93240c78636131c5d1d25d488f
-DIST flay-2.5.0.gem 20992 SHA256 b9d21fc6b056fa8bbad23d351962e4c955a1234baff993e43e241b533d40fdc5 SHA512 5118bf6a71d3b7e67981ca1852db79221bc68f8386fed32e6989573d76cc515d078766165e336e708e2b59e4b85963d31243c9b3275b21f0288d5bf7de2a8c36 WHIRLPOOL 6a2c262d649567ca166d07fe20cde7f0c08c986e7bb95fa6bc6630343a10c1408aa071d73f3cd2489330f72f07bbe8f2814982f9451c76ea8482d83e9e9665e2
 DIST flay-2.6.0.gem 22016 SHA256 4379d35a79d9596c9497a163d519f2c286a67b31e756aceaf610c661d85622fb SHA512 2acb926f3fffb13c228e1798aad69cd9950017446913647e668980b1fc0a8ec374defc04b10b52519c2552c2a702c0f875fb77d3c92ffa2b6de0cfe67a94b590 WHIRLPOOL d3eefd6118118a02fe0a109ac1227fef2efd83c57ff5f05cd76025b88b81dabeab2b83088c732d6cfbe9a0f81e431fa9930d54e39983d966262aafbaaaa2f587
 DIST flay-2.6.1.gem 22016 SHA256 c6c28f61ba72fdb50e7f45c8658215965c5bbce4fc37a1306b3d6267ab4d977d SHA512 1e25f89baea3ad1fb34bc994ef23704875fb7599c6850a0e084a345d560b738db8b0f8dd7055977435128ed9599ffedbb30b6f747bc59e72a2008b5cd3f3d1a8 WHIRLPOOL 0d020e2d98363b2a72bed7d85ad29c12d3965a9cac0bc9ea201722924a0c10436429cd539c19e563f66aaf2cf4537d45f9414c6fdf00079ac2001552315ba2ee
