@@ -1,25 +1,0 @@
-# Copyright 1999-2013 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI=5
-USE_RUBY="ruby19"
-
-RUBY_FAKEGEM_TASK_DOC="docs"
-RUBY_FAKEGEM_DOCDIR="doc"
-RUBY_FAKEGEM_EXTRADOC="History.txt README.txt"
-
-inherit ruby-fakegem
-
-DESCRIPTION="Flay analyzes code for structural similarities."
-HOMEPAGE="http://ruby.sadi.st/"
-LICENSE="MIT"
-
-KEYWORDS="~amd64 ~x86"
-SLOT="0"
-IUSE=""
-
-ruby_add_rdepend "dev-ruby/sexp_processor:4 dev-ruby/ruby_parser:3"
-
-ruby_add_bdepend "doc? ( dev-ruby/hoe )"
-ruby_add_bdepend "test? ( dev-ruby/hoe dev-ruby/minitest )"
